<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TAAP</string>
    <string name="action_settings">Settings</string>
    <string name="LEDControl">Control the LED - Press the desired button!</string>
    <string name="button_send1">On</string>
    <string name="button_send2">Off</string>
    <string name="button_send3">Blink</string>
    <string name="Time"><u><b>Time</b></u></string>
    <string name="Temperature"><u><b>Temperature</b></u></string>
    <string name="Condition"><u><b>Condition</b></u></string>
    <string name="TimeDisplay">Time Display</string>
    <string name="TemperatureDisplay">Temperature Display</string>
    <string name="ConditionDisplay">Condition Display</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Send">Send</string>
    <string name="Type">Status</string>
    <string name="Type2">Rec</string>
    <string name="Rec">Receive</string>
    <string name="Labelnew">Data</string>
    <string name="Back">Back</string>
    

</resources>
